--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>SampleDemo</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+    <head>
+        <title>SampleDemo</title>
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+        <%= csrf_meta_tags %>
+    </head>
+    <body>
+        <header>
+            <ul>
+            <% if current_user %>
+                <li><%= link_to "Logout", destroy_user_session_path,:method => :delete %></li>
+            <% else %>
+                <li><%= link_to "Login", new_user_session_path %></li>
+                <li><%= link_to "Register", new_user_registration_path %></li>
+            <% end %>
+            </ul>
+        </header>
 
-<%= yield %>
+        <%= yield %>
 
-</body>
+    </body>
 </html>
