--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,145 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="main row">
+    <div class="col-md-6 content_left">
+        <%= image_tag("pic1.jpg",:class => "img-responsive") %>
+    </div>
+    <div class="col-md-6 content_right">
+        <h4>Lorem Ipsum is simply <span>dummy text of the ornare  </span> vulputate printing and  There are many variations of passages.</h4>
+        <p class="para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words. </p>
+        <a href="single-page.html" class="fa-btn btn-1 btn-1e">read more</a>
+    </div>
+</div>
+<!----start-img-cursual---->
+<div id="owl-demo" class="owl-carousel text-center">
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c1.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">vehicula diam</a></h4>
+            <p>
+                Lorem ipsum dolor amet,consectetur adipisicing elit, sed do eiusmod tempor incididunt dolore magna aliqua.
+            </p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c2.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">Morbi nunc</a></h4>
+            <p>
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+            </p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c3.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">Lorem ipsum</a></h4>
+            <p>
+                On the other hand, we denounce with righteous indignation and dislike men who are so beguiled  pleasure of the moment,
+            </p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c4.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">Sed faucibus</a></h4>
+            <p>
+                Lorem ipsum dolor amet,consectetur adipisicing elit, sed do eiusmod tempor incididunt dolore magna aliqua.
+            </p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c2.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">Lorem ipsum</a></h4>
+            <p>
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+            </p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c3.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">Lorem ipsum</a></h4>
+            <p>
+                On the other hand, we denounce with righteous indignation and dislike men who are so beguiled  pleasure of the moment,
+            </p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c4.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">vehicula diam</a></h4>
+            <p>
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+            </p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c1.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">Lorem ipsum</a></h4>
+            <p>
+                On the other hand, we denounce with righteous indignation and dislike men who are so beguiled  pleasure of the moment,
+            </p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c2.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">Lorem ipsum</a></h4>
+            <p>
+                Lorem ipsum dolor amet,consectetur adipisicing elit, sed do eiusmod tempor incididunt dolore magna aliqua.
+            </p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c3.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">vehicula diam</a></h4>
+            <p>
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+            </p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c1.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">Lorem ipsum</a></h4>
+            <p>
+                On the other hand, we denounce with righteous indignation and dislike men who are so beguiled  pleasure of the moment,
+            </p>
+        </div>
+    </div>
+    <div class="item">
+        <div class="cau_left">
+            <%= image_tag("c4.jpg",:class => "lazyOwl") %>
+        </div>
+        <div class="cau_left">
+            <h4><a href="#">Morbi nunc</a></h4>
+            <p>
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+            </p>
+        </div>
+    </div>
+</div>
